--- a/math/bib.bib
+++ b/math/bib.bib
@@ -72,3 +72,12 @@
 	language = {French},
 	volume = 736,
 	pages = {5–23}}
+
+@article{Varadhan1966,
+	author = {Varadhan, S. R. S.},
+	title = {Asymptotic probabilities and differential equations},
+	year = 1966,
+	journal = {Communications on Pure and Applied Mathematics},
+	volume = 19,
+	pages = {261–286},
+	doi = {https://doi.org/10.1002/cpa.3160190303}}
